[package]
name = "echo-client-and-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"
path = "src/server/main.rs"

[[bin]]
name = "client"
path = "src/client/main.rs"


[dependencies]
clap = { version = "4.5.2", features = ["derive", "string"] }
nix = "0.28.0"
threadpool = "1.8.1"
log = "0.4.21"
env_logger = "0.11.3"
ctor = "0.2.7"
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros", "sync", "signal", "signal-hook-registry", "net", "time"] }
futures = "0.3.30"
tokio-util = "0.7.10"
libc = "0.2.153"
